chore: Adds continuation playground on JDK21